--- a/css/main.css
+++ b/css/main.css
@@ -4,7 +4,7 @@
 body {
   color: #333333;   
   font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-  background-color: #c4dce1;                      /*change your Bkg color*/
+  background-color: #C0C0C0;                      /*change your Bkg color*/
 }
 
 a, a:active, a:visited {
@@ -25,7 +25,7 @@ footer {
 }
 
 footer p {
-  font-size: 18px;                 /*font size in footer*/
+  font-size: 20px;                 /*font size in footer*/
   padding: 0;
   margin: 0;
 }
@@ -33,7 +33,7 @@ footer p {
 header {
   background: #C8C1B7;
   border-bottom: 1px solid #999999;
-  background-image: url("../img/gallerybanner.jpg"); /*change your banner image*/
+  background-image: url("../img/banner.jpg"); /*change your banner image*/
   height: 60px;
   position: relative;
   width: 100%;
